--- a/package.json
+++ b/package.json
@@ -18,6 +18,14 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@metamask/eth-sig-util": "^7.0.0",
+    "framer-motion": "^10.13.1",
+    "next": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.2"
+  },
+  "devDependencies": {
+    "@types/react": "18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "eslint": "^8.45.0",
@@ -26,15 +34,6 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "framer-motion": "^10.13.1",
-    "next": "^13.5.0",
-    "prettier": "^3.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.2"
-  },
-  "devDependencies": {
-    "@types/react": "18.2.15",
-    "typescript": "5.4.5"
+    "prettier": "^3.0.0"
   }
 }
