--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -53,12 +53,20 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^14.18.54",
     "@types/sha.js": "^2.4.1",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
     "babel-jest": "^27.5.1",
+    "eslint": "^8.45.0",
+    "eslint-config-preact": "^1.3.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "jest": "^27.5.1",
     "jest-chrome": "^0.7.2",
     "jest-websocket-mock": "^2.4.0",
     "nodemon": "^3.1.0",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.0",
     "sass": "^1.64.1",
     "ts-jest": "^27.1.5",
     "ts-node": "^10.9.1",
