Revert "merge conflict res"
This reverts commit 5fcf3fe2cee87ff0be3c496e0f2e800e92c29b9a.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./packages/wallet-sdk
+        working-directory: ./
 
     steps:
       - name: Checkout
@@ -34,7 +34,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./packages/wallet-sdk
+        working-directory: ./
 
     steps:
       - name: Checkout
@@ -50,6 +50,7 @@ jobs:
         run: yarn install --immutable
 
       - name: Runs compile asset script
+        working-directory: ./packages/wallet-sdk
         run: node ./compile-assets.js
 
       - name: Check Types
@@ -60,7 +61,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./packages/wallet-sdk
+        working-directory: ./
 
     strategy:
       matrix:
@@ -80,7 +81,9 @@ jobs:
         run: yarn install --immutable
 
       - name: Runs compile asset script
+        working-directory: ./packages/wallet-sdk
         run: node ./compile-assets.js
 
       - name: Run Unit Tests
+        working-directory: ./packages/wallet-sdk
         run: yarn test
