--- a/.eslintignore
+++ b/.eslintignore
@@ -1,8 +1,12 @@
 # specific files to ignore
 *.md
+.eslintrc.js
+.eslintignore
+webpack.*.js
 
 # folders to ignore
 build
+chrome
 dist
 node_modules
 verdor-js
