--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,23 +1,8 @@
 {
-  "include": [
-    "./src",
-    "**/*.test.*",
-  ],
-  "exclude": [
-    "dist",
-  ],  
   "compilerOptions": {
-    "allowJs": true,
+    "allowJs": false,
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
-    "outDir": "./dist",
-    "paths": {
-      ":util/*": ["src/util/*"],
-      ":core/*": ["src/core/*"]
-    },
-    "target": "es2017",
-    "jsx": "react",
-    "jsxFactory": "h",
     "esModuleInterop": true,
     "emitDecoratorMetadata": true,    
     "experimentalDecorators": true,
@@ -40,6 +25,7 @@
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "target": "es2016",
     "types": ["node", "jest", "@testing-library/jest-dom"],
   }
 }
