--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -35,6 +35,7 @@
   },
   "peerDependencies": {
     "expo": "*",
+    "expo-linking": "*",
     "expo-web-browser": "*",
     "react": "*",
     "react-native": "*"
@@ -48,9 +49,9 @@
     "@peculiar/webcrypto": "^1.4.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/preact": "^2.0.1",
+    "@testing-library/react": "^16.0.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^14.18.54",
-    "@types/react": "^18.0.25",
     "@types/react-native": "^0.70.6",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
@@ -61,12 +62,15 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "expo-linking": "^6.3.1",
     "expo-web-browser": "^13.0.3",
     "jest": "^27.5.1",
     "jest-chrome": "^0.7.2",
     "jest-websocket-mock": "^2.4.0",
     "nodemon": "^3.1.0",
     "prettier": "^3.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sass": "^1.64.1",
     "ts-jest": "^27.1.5",
     "ts-node": "^10.9.1",
