--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -49,7 +49,7 @@
     "@peculiar/webcrypto": "^1.4.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/preact": "^2.0.1",
-    "@testing-library/react": "^16.0.0",
+    "@testing-library/react": "14.3.1",
     "@types/jest": "^27.5.2",
     "@types/node": "^14.18.54",
     "@types/react-native": "^0.70.6",
