--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -38,6 +38,7 @@
     "expo-linking": "*",
     "expo-web-browser": "*",
     "react": "*",
+    "react-dom": "*",
     "react-native": "*"
   },
   "devDependencies": {
@@ -52,6 +53,7 @@
     "@testing-library/react": "14.3.1",
     "@types/jest": "^27.5.2",
     "@types/node": "^14.18.54",
+    "@types/react": "^18.0.25",
     "@types/react-native": "^0.70.6",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
@@ -69,8 +71,6 @@
     "jest-websocket-mock": "^2.4.0",
     "nodemon": "^3.1.0",
     "prettier": "^3.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "sass": "^1.64.1",
     "ts-jest": "^27.1.5",
     "ts-node": "^10.9.1",
