--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.2"
+    "react-hook-form": "^7.45.2",
+    "viem": "2.21.1"
   },
   "devDependencies": {
     "@types/react": "18.2.15",
