--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
   "name": "@coinbase/wallet-sdk-testapp",
   "packageManager": "yarn@3.6.1",
   "scripts": {
+    "lint": "eslint . --ext .ts,.tsx --fix",
+    "typecheck": "tsc --noEmit",
     "dev": "next dev --port 3001",
     "build": "next build",
     "start": "next start",
-    "export": "yarn workspace @coinbase/wallet-sdk run build && next build && next export"
+    "export": "next build && next export"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.0",
     "@coinbase/wallet-sdk-3.7.2": "npm:@coinbase/wallet-sdk@3.7.2",
     "@coinbase/wallet-sdk-3.9.3": "npm:@coinbase/wallet-sdk@3.9.3",
-    "@coinbase/wallet-sdk-4.0.0": "npm:@coinbase/wallet-sdk@4.0.0",
+    "@coinbase/wallet-sdk-4.0.2": "npm:@coinbase/wallet-sdk@4.0.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@metamask/eth-sig-util": "^7.0.0",
@@ -23,6 +25,16 @@
     "react-hook-form": "^7.45.2"
   },
   "devDependencies": {
-    "@types/react": "18.2.15"
+    "@types/react": "18.2.15",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
+    "eslint": "^8.45.0",
+    "eslint-config-preact": "^1.3.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "prettier": "^3.0.0",
+    "typescript": "^5.1.6"
   }
 }
