--- a/package.json
+++ b/package.json
@@ -25,5 +25,6 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "prettier": "^3.0.0"
-  }
+  },
+  "packageManager": "yarn@4.5.0"
 }
