--- a/apps/playground/package.json
+++ b/apps/playground/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.0",
-    "@coinbase/wallet-sdk": "workspace:^",
+    "@coinbase/wallet-sdk": "workspace:*",
     "@coinbase/wallet-sdk-3.7.2": "npm:@coinbase/wallet-sdk@3.7.2",
     "@coinbase/wallet-sdk-3.9.3": "npm:@coinbase/wallet-sdk@3.9.3",
-    "@coinbase/wallet-sdk-4.0.4": "npm:@coinbase/wallet-sdk@4.0.4",
+    "@coinbase/wallet-sdk-4.0.4": "npm:@coinbase/wallet-sdk@latest",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@metamask/eth-sig-util": "^7.0.0",
