--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version-file: '.nvmrc'
-          cache-dependency-path: 'yarn.lock'
+          cache: yarn
 
       - name: Install NPM dependencies
         run: yarn install --immutable
@@ -44,7 +44,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version-file: '.nvmrc'
-          cache-dependency-path: '**/yarn.lock'
+          cache: yarn
 
       - name: Install NPM dependencies
         run: yarn install --immutable
@@ -74,7 +74,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          cache-dependency-path: '**/yarn.lock'
+          cache: yarn
 
       - name: Install NPM dependencies
         run: yarn install --immutable
