--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,11 +17,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Checkout node action
-        uses: actions/setup-node@v3
-        with:
-          node-version-file: '.nvmrc'
-          cache: yarn
+      - name: Install correct Yarn version
+        run: |
+          corepack enable
+          corepack prepare yarn@4.5.0 --activate
+
 
       - name: Install NPM dependencies
         run: yarn install --immutable
@@ -40,11 +40,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Checkout node action
-        uses: actions/setup-node@v3
-        with:
-          node-version-file: '.nvmrc'
-          cache: yarn
+      - name: Install correct Yarn version
+        run: |
+          corepack enable
+          corepack prepare yarn@4.5.0 --activate
 
       - name: Install NPM dependencies
         run: yarn install --immutable
@@ -62,19 +61,14 @@ jobs:
       run:
         working-directory: ./packages/wallet-sdk
 
-    strategy:
-      matrix:
-        node-version: [16.x, 18.x, 20.x]
-
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: yarn
+      - name: Install correct Yarn version
+        run: |
+          corepack enable
+          corepack prepare yarn@4.5.0 --activate
 
       - name: Install NPM dependencies
         run: yarn install --immutable
