--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -20,11 +20,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Setup Node
-        uses: actions/setup-node@v3
-        with:
-          node-version: "18"
-          cache: yarn
+      - name: Install correct Yarn version
+        run: |
+          corepack enable
+          corepack prepare yarn@4.5.0 --activate
       - name: Setup Pages
         uses: actions/configure-pages@v3
         with:
