--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "apps/*"
   ],
   "scripts": {
-    "lint": "yarn workspaces foreach -A -pt run lint",
-    "typecheck": "yarn workspaces foreach -A -pt run typecheck",
-    "dev": "yarn workspaces foreach -A -ipv run dev",
-    "deploy": "yarn workspace @coinbase/wallet-sdk build && yarn workspace sdk-playground export"
+    "lint": "yarn workspaces foreach -pt run lint",
+    "typecheck": "yarn workspaces foreach -pt run typecheck",
+    "dev": "yarn workspaces foreach -ipv run dev",
+    "release": "./scripts/release.sh"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.2.0",
@@ -26,5 +26,5 @@
     "eslint-plugin-unused-imports": "^3.0.0",
     "prettier": "^3.0.0"
   },
-  "packageManager": "yarn@4.5.0"
+  "packageManager": "yarn@3.6.1"
 }
