feat: fix nodenext module resolution; jest → vitest; remove barrel files

--- a/packages/wallet-sdk/tsconfig.build.json
+++ b/packages/wallet-sdk/tsconfig.build.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "allowJs": false,
     "declaration": true,
-    "sourceMap": false,
+    "declarationMap": true,
+    "sourceMap": true,
   },
   "include": ["src"],
   "exclude": ["dist", "build", "**/*.test.*", "mocks"]
