--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -11,6 +11,7 @@
     "walletlink",
     "web3"
   ],
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "sideEffects": false,
@@ -18,35 +19,30 @@
   "author": "Coinbase, Inc.",
   "license": "Apache-2.0",
   "scripts": {
-    "pretest": "node compile-assets.js",
-    "test": "jest",
+    "pretest": "node compile-assets.cjs",
+    "test": "vitest",
     "test:coverage": "yarn test:unit && open coverage/lcov-report/index.html",
     "prebuild": "rm -rf ./dist && node -p \"'export const LIB_VERSION = \\'' + require('./package.json').version + '\\';'\" > src/version.ts",
-    "build": "node compile-assets.js && tsc -p ./tsconfig.build.json && tsc-alias && cp -a src/vendor-js dist",
+    "build": "node compile-assets.cjs && tsc -p ./tsconfig.build.json && tsc-alias && cp -a src/vendor-js dist",
     "dev": "yarn build && tsc --watch & nodemon --watch dist --delay 1 --exec tsc-alias",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint . --ext .ts,.tsx --fix"
+    "lint": "eslint . --ext .ts,.tsx --fix",
+    "size": "size-limit"
   },
   "dependencies": {
     "@noble/hashes": "^1.4.0",
     "clsx": "^1.2.1",
     "eventemitter3": "^5.0.1",
-    "preact": "^10.16.0"
+    "preact": "^10.24.2",
+    "vitest": "^2.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.9",
-    "@babel/plugin-proposal-decorators": "^7.22.7",
-    "@babel/plugin-transform-react-jsx": "^7.22.5",
-    "@babel/preset-env": "^7.22.9",
-    "@babel/preset-typescript": "^7.22.5",
-    "@peculiar/webcrypto": "^1.4.3",
+    "@size-limit/preset-big-lib": "^11.1.6",
     "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/preact": "^2.0.1",
-    "@types/jest": "^27.5.2",
+    "@testing-library/preact": "^3.2.4",
     "@types/node": "^14.18.54",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
-    "babel-jest": "^27.5.1",
     "eslint": "^8.45.0",
     "eslint-config-preact": "^1.3.0",
     "eslint-config-prettier": "^8.8.0",
@@ -54,16 +50,21 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "glob": "^11.0.0",
-    "jest": "^27.5.1",
-    "jest-chrome": "^0.7.2",
     "jest-websocket-mock": "^2.4.0",
+    "jsdom": "^25.0.1",
     "nodemon": "^3.1.0",
     "prettier": "^3.0.0",
     "sass": "^1.64.1",
-    "ts-jest": "^27.1.5",
-    "ts-node": "^10.9.1",
+    "size-limit": "^11.1.6",
     "tsc-alias": "^1.8.8",
     "tslib": "^2.6.0",
     "typescript": "^5.1.6"
-  }
+  },
+  "size-limit": [
+    {
+      "path": "./dist/index.js",
+      "limit": "31 KB",
+      "import": "*"
+    }
+  ]
 }
