--- a/packages/wallet-sdk/tsconfig.base.json
+++ b/packages/wallet-sdk/tsconfig.base.json
@@ -40,6 +40,6 @@
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "types": ["node", "jest", "@testing-library/jest-dom"],
+    "types": ["node", "vitest/globals", "@testing-library/jest-dom"],
   }
 }
