remove next config (#1419)

--- a/examples/testapp/package.json
+++ b/examples/testapp/package.json
@@ -15,7 +15,7 @@
     "@coinbase/wallet-sdk": "workspace:*",
     "@coinbase/wallet-sdk-3.7.2": "npm:@coinbase/wallet-sdk@3.7.2",
     "@coinbase/wallet-sdk-3.9.3": "npm:@coinbase/wallet-sdk@3.9.3",
-    "@coinbase/wallet-sdk-latest": "npm:@coinbase/wallet-sdk@latest",
+    "@coinbase/wallet-sdk-4.0.4": "npm:@coinbase/wallet-sdk@latest",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@metamask/eth-sig-util": "^7.0.0",
