--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
         run: yarn install --immutable
 
       - name: Runs compile asset script
-        run: node ./compile-assets.js
+        run: node ./compile-assets.cjs
 
       - name: Check Types
         run: yarn typecheck
@@ -80,7 +80,7 @@ jobs:
         run: yarn install --immutable
 
       - name: Runs compile asset script
-        run: node ./compile-assets.js
+        run: node ./compile-assets.cjs
 
       - name: Run Unit Tests
         run: yarn test
