--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -37,16 +37,16 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version-file: '.nvmrc'
-          cache-dependency-path: '**/yarn.lock'
+          node-version-file: ".nvmrc"
+          cache-dependency-path: "**/yarn.lock"
 
       - name: Update version
         run: npm version ${{ env.PACKAGE_VERSION }} --no-git-tag-version --workspaces-update=false
 
       - name: Install NPM dependencies
         run: yarn install --immutable
-  
-      - name: Update version.ts file
+
+      - name: Update sdk-info.ts file
         run: yarn prebuild
 
       - name: Commit and branch updated version
