--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -37,8 +37,8 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version-file: ".nvmrc"
-          cache-dependency-path: "**/yarn.lock"
+          node-version-file: '.nvmrc'
+          cache-dependency-path: '**/yarn.lock'
 
       - name: Update version
         run: npm version ${{ env.PACKAGE_VERSION }} --no-git-tag-version --workspaces-update=false
