--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coinbase/wallet-sdk",
-  "version": "4.2.2",
+  "version": "4.2.3",
   "description": "Coinbase Wallet JavaScript SDK",
   "keywords": [
     "coinbase",
@@ -33,8 +33,7 @@
     "@noble/hashes": "^1.4.0",
     "clsx": "^1.2.1",
     "eventemitter3": "^5.0.1",
-    "preact": "^10.24.2",
-    "vitest": "^2.1.2"
+    "preact": "^10.24.2"
   },
   "devDependencies": {
     "@size-limit/preset-big-lib": "^11.1.6",
@@ -58,7 +57,8 @@
     "size-limit": "^11.1.6",
     "tsc-alias": "^1.8.8",
     "tslib": "^2.6.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vitest": "^2.1.2"
   },
   "size-limit": [
     {
