--- a/packages/wallet-sdk/tsconfig.base.json
+++ b/packages/wallet-sdk/tsconfig.base.json
@@ -13,9 +13,11 @@
     "outDir": "./dist",
     "paths": {
       ":util/*": ["src/util/*"],
-      ":core/*": ["src/core/*"]
+      ":core/*": ["src/core/*"],
+      ":sign/*": ["src/sign/*"],
+      ":features/*": ["src/features/*"]
     },
-    "target": "es2017",
+    "target": "es2020",
     "jsx": "react",
     "jsxFactory": "h",
     "esModuleInterop": true,
