--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "pretest": "node compile-assets.cjs",
     "test": "vitest",
-    "test:coverage": "yarn test && open coverage/lcov-report/index.html",
+    "test:coverage": "vitest --coverage",
     "prebuild": "rm -rf ./dist && node -p \"'export const VERSION = \\'' + require('./package.json').version + '\\';\\nexport const NAME = \\'' + require('./package.json').name + '\\';'\" > src/sdk-info.ts",
     "build": "node compile-assets.cjs && tsc -p ./tsconfig.build.json && tsc-alias && cp -a src/vendor-js dist",
     "dev": "yarn build && tsc --watch & nodemon --watch dist --delay 1 --exec tsc-alias",
