--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./packages/wallet-sdk
+        working-directory: ./
 
     steps:
       - name: Checkout
@@ -56,11 +56,11 @@ jobs:
         run: yarn typecheck
 
   tests:
-    name: Tests
+    name: Test Wallet SDK
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./packages/wallet-sdk
+        working-directory: ./
 
     strategy:
       matrix:
@@ -84,26 +84,3 @@ jobs:
 
       - name: Run Unit Tests
         run: yarn test
-        
-  lint-testapp:
-    name: Lint Testapp
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./examples/testapp
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Checkout node action
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: '.nvmrc'
-          cache-dependency-path: 'yarn.lock'
-
-      - name: Install NPM dependencies
-        run: yarn install --immutable
-
-      - name: eslint
-        run: yarn lint
