Create CryptoKey Lib for linked accounts (#1498)
* create cryptokey lib

* clean up

* yarn lint

* add typecheck

* update GHA

* fix GHA

* fix ci

* use getSignPayload util

* remove unused vars

* update readme

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,8 @@ jobs:
         run: yarn install --immutable
 
       - name: Runs compile asset script
-        run: node ./compile-assets.cjs
+        run: |
+          node ./compile-assets.cjs
 
       - name: Check Types
         run: yarn typecheck
@@ -60,7 +61,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./packages/wallet-sdk
+        working-directory: ./
 
     strategy:
       matrix:
@@ -80,30 +81,10 @@ jobs:
         run: yarn install --immutable
 
       - name: Runs compile asset script
-        run: node ./compile-assets.cjs
+        run: |
+          cd ./packages/wallet-sdk
+          node ./compile-assets.cjs
+          cd ../../
 
       - name: Run Unit Tests
         run: yarn test
-        
-  lint-testapp:
-    name: Lint Testapp
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./examples/testapp
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Checkout node action
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: '.nvmrc'
-          cache-dependency-path: 'yarn.lock'
-
-      - name: Install NPM dependencies
-        run: yarn install --immutable
-
-      - name: eslint
-        run: yarn lint
