--- a/libs/crypto-key/tsconfig.json
+++ b/libs/crypto-key/tsconfig.json
@@ -7,6 +7,8 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "declaration": true,
+    "declarationMap": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "lib": [
@@ -28,7 +30,7 @@
     ],
   },
   "include": [
-    "**/*.ts",
+    "src",
   ],
   "exclude": [
     "dist",
