--- a/libs/crypto-key/package.json
+++ b/libs/crypto-key/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crypto-key",
+  "name": "@coinbase/wallet-sdk-crypto-key",
   "packageManager": "yarn@3.6.1",
   "version": "0.0.1",
   "type": "module",
