--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -30,6 +30,7 @@
     "size": "size-limit"
   },
   "dependencies": {
+    "@coinbase/wallet-sdk-crypto-key": "workspace:^",
     "@noble/hashes": "^1.4.0",
     "clsx": "^1.2.1",
     "eventemitter3": "^5.0.1",
