--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "examples/*"
   ],
   "scripts": {
-    "deploy": "yarn workspace @coinbase/wallet-sdk build && yarn workspace sdk-playground export",
+    "build:packages": "yarn workspace @coinbase/wallet-sdk build && yarn workspace @coinbase/wallet-sdk-crypto-key build",
+    "deploy": "yarn build:packages && yarn workspace sdk-playground export",
     "dev": "yarn workspaces foreach -ipv run dev",
     "lint": "yarn workspaces foreach -pt run lint",
     "test": "yarn workspaces foreach -ipv run test",
