--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "examples/*"
   ],
   "scripts": {
-    "build:packages": "yarn workspace @coinbase/wallet-sdk build && yarn workspace @coinbase/wallet-sdk-crypto-key build",
+    "build:packages": "yarn workspace @coinbase/wallet-sdk-crypto-key build && yarn workspace @coinbase/wallet-sdk build",
     "deploy": "yarn build:packages && yarn workspace sdk-playground export",
     "dev": "yarn workspaces foreach -ipv run dev",
     "lint": "yarn workspaces foreach -pt run lint",
