--- a/examples/testapp/package.json
+++ b/examples/testapp/package.json
@@ -2,7 +2,7 @@
   "name": "sdk-playground",
   "version": "0.0.1",
   "scripts": {
-    "lint": "eslint . --ext .ts,.tsx --fix",
+    "lint": "eslint . --ext .ts,.tsx",
     "typecheck": "tsc --noEmit",
     "dev": "next dev --port 3001",
     "build": "next build",
