--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -26,7 +26,7 @@
     "build": "node compile-assets.cjs && tsc -p ./tsconfig.build.json && tsc-alias && cp -a src/vendor-js dist",
     "dev": "yarn build && tsc --watch & nodemon --watch dist --delay 1 --exec tsc-alias",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint . --ext .ts,.tsx --fix",
+    "lint": "eslint . --ext .ts,.tsx",
     "size": "size-limit"
   },
   "dependencies": {
