--- a/examples/testapp/package.json
+++ b/examples/testapp/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "lint": "eslint . --ext .ts,.tsx",
+    "clean": "rm -rf node_modules && rm -rf .next",
     "typecheck": "tsc --noEmit",
     "dev": "next dev --port 3001",
     "build": "next build",
