--- a/libs/crypto-key/package.json
+++ b/libs/crypto-key/package.json
@@ -7,6 +7,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
+    "clean": "rm -rf node_modules && rm -rf dist",
     "dev": "tsc --watch",
     "lint": "eslint . --ext .ts",
     "test": "vitest",
