--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -31,38 +31,38 @@
   },
   "dependencies": {
     "@coinbase/wallet-sdk-crypto-key": "workspace:^",
-    "@noble/hashes": "^1.4.0",
-    "clsx": "^1.2.1",
-    "eventemitter3": "^5.0.1",
-    "preact": "^10.24.2",
-    "viem": "^2.22.17",
-    "zustand": "^5.0.3"
+    "@noble/hashes": "1.4.0",
+    "clsx": "1.2.1",
+    "eventemitter3": "5.0.1",
+    "preact": "10.24.2",
+    "viem": "2.22.17",
+    "zustand": "5.0.3"
   },
   "devDependencies": {
-    "@size-limit/preset-big-lib": "^11.1.6",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/preact": "^3.2.4",
-    "@types/node": "^14.18.54",
-    "@typescript-eslint/eslint-plugin": "^6.2.0",
-    "@typescript-eslint/parser": "^6.2.0",
+    "@size-limit/preset-big-lib": "11.1.6",
+    "@testing-library/jest-dom": "6.5.0",
+    "@testing-library/preact": "3.2.4",
+    "@types/node": "14.18.54",
+    "@typescript-eslint/eslint-plugin": "6.2.0",
+    "@typescript-eslint/parser": "6.2.0",
     "@vitest/coverage-v8": "2.1.2",
-    "eslint": "^8.45.0",
-    "eslint-config-preact": "^1.3.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-unused-imports": "^3.0.0",
-    "glob": "^11.0.0",
-    "jest-websocket-mock": "^2.4.0",
-    "jsdom": "^25.0.1",
-    "nodemon": "^3.1.0",
-    "prettier": "^3.0.0",
-    "sass": "^1.64.1",
-    "size-limit": "^11.1.6",
-    "tsc-alias": "^1.8.8",
-    "tslib": "^2.6.0",
-    "typescript": "^5.1.6",
-    "vitest": "^2.1.9"
+    "eslint": "8.45.0",
+    "eslint-config-preact": "1.3.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-prettier": "5.0.0",
+    "eslint-plugin-simple-import-sort": "10.0.0",
+    "eslint-plugin-unused-imports": "3.0.0",
+    "glob": "11.0.0",
+    "jest-websocket-mock": "2.4.0",
+    "jsdom": "25.0.1",
+    "nodemon": "3.1.0",
+    "prettier": "3.0.0",
+    "sass": "1.64.1",
+    "size-limit": "11.1.6",
+    "tsc-alias": "1.8.8",
+    "tslib": "2.6.0",
+    "typescript": "5.1.6",
+    "vitest": "2.1.9"
   },
   "size-limit": [
     {
