--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -30,13 +30,14 @@
     "size": "size-limit"
   },
   "dependencies": {
-    "@coinbase/wallet-sdk-crypto-key": "workspace:^",
-    "@noble/hashes": "^1.4.0",
-    "clsx": "^1.2.1",
-    "eventemitter3": "^5.0.1",
-    "preact": "^10.24.2",
-    "viem": "^2.22.17",
-    "zustand": "^5.0.3"
+    "@noble/hashes": "1.4.0",
+    "clsx": "1.2.1",
+    "eventemitter3": "5.0.1",
+    "idb-keyval": "6.2.1",
+    "ox": "0.6.9",
+    "preact": "10.24.2",
+    "viem": "2.22.17",
+    "zustand": "5.0.3"
   },
   "devDependencies": {
     "@size-limit/preset-big-lib": "^11.1.6",
@@ -52,6 +53,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "fake-indexeddb": "^6.0.0",
     "glob": "^11.0.0",
     "jest-websocket-mock": "^2.4.0",
     "jsdom": "^25.0.1",
