--- a/packages/wallet-sdk/tsconfig.base.json
+++ b/packages/wallet-sdk/tsconfig.base.json
@@ -13,7 +13,8 @@
     "outDir": "./dist",
     "paths": {
       ":util/*": ["src/util/*"],
-      ":core/*": ["src/core/*"]
+      ":core/*": ["src/core/*"],
+      ":sign/*": ["src/sign/*"]
     },
     "target": "es2017",
     "jsx": "react",
