--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coinbase/wallet-sdk",
-  "version": "4.3.0",
+  "version": "4.4.0-canary.1",
   "description": "Coinbase Wallet JavaScript SDK",
   "keywords": [
     "coinbase",
