--- a/packages/wallet-sdk/tsconfig.base.json
+++ b/packages/wallet-sdk/tsconfig.base.json
@@ -14,7 +14,7 @@
     "paths": {
       ":util/*": ["src/util/*"],
       ":core/*": ["src/core/*"],
-      ":stores/*": ["src/stores/*"],
+      ":store/*": ["src/store/*"],
       ":sign/*": ["src/sign/*"],
     },
     "target": "es2017",
