--- a/package.json
+++ b/package.json
@@ -20,16 +20,7 @@
     "typecheck": "yarn workspaces foreach -pt run typecheck"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "@typescript-eslint/eslint-plugin": "^6.2.0",
-    "@typescript-eslint/parser": "^6.2.0",
-    "eslint": "^8.45.0",
-    "eslint-config-preact": "^1.3.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-unused-imports": "^3.0.0",
-    "prettier": "^3.0.0"
+    "@biomejs/biome": "^1.9.4"
   },
   "packageManager": "yarn@3.6.1"
 }
