--- a/.github/workflows/release-canary.yml
+++ b/.github/workflows/release-canary.yml
@@ -23,8 +23,12 @@ jobs:
 
       - name: Set version
         run: npm --no-git-tag-version version $(node -p "require('./packages/wallet-sdk/package.json').version")-canary.$(date +'%Y%m%d') -w packages/wallet-sdk
-
-      - name: Build
+      
+      # Build the package
+      - name: Prebuild
+        run: yarn workspace @coinbase/wallet-sdk prebuild
+      
+      - name: Build Packages
         shell: bash
         run: yarn build:packages
 
@@ -34,5 +38,5 @@ jobs:
       - name: Publish to npm
         run: cd packages/wallet-sdk && npm publish --tag canary
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
  
