--- a/packages/wallet-sdk/tsconfig.base.json
+++ b/packages/wallet-sdk/tsconfig.base.json
@@ -31,8 +31,8 @@
       "dom.iterable",
       "es2016",
     ],
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "sourceMap": true,
