--- a/examples/testapp/package.json
+++ b/examples/testapp/package.json
@@ -6,7 +6,7 @@
     "clean": "rm -rf .next && rm -rf node_modules",
     "dev": "next dev --port 3001",
     "export": "yarn build && touch ./out/.nojekyll",
-    "lint": "eslint . --ext .ts,.tsx",
+    "lint": "biome lint .",
     "start": "next start",
     "test": "vitest",
     "typecheck": "tsc --noEmit"
@@ -30,15 +30,6 @@
   },
   "devDependencies": {
     "@types/react": "18.2.15",
-    "@typescript-eslint/eslint-plugin": "^6.2.0",
-    "@typescript-eslint/parser": "^6.2.0",
-    "eslint": "^8.45.0",
-    "eslint-config-preact": "^1.3.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-unused-imports": "^3.0.0",
-    "prettier": "^3.0.0",
     "typescript": "^5.1.6",
     "vitest": "^3.0.4"
   }
