--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -27,7 +27,7 @@
     "build": "node compile-assets.cjs && tsc -p ./tsconfig.build.json && tsc-alias && cp -a src/vendor-js dist",
     "dev": "yarn build && tsc --watch & nodemon --watch dist --delay 1 --exec tsc-alias",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint . --ext .ts,.tsx",
+    "lint": "biome lint .",
     "size": "size-limit"
   },
   "dependencies": {
@@ -45,21 +45,12 @@
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/preact": "^3.2.4",
     "@types/node": "^14.18.54",
-    "@typescript-eslint/eslint-plugin": "^6.2.0",
-    "@typescript-eslint/parser": "^6.2.0",
     "@vitest/coverage-v8": "2.1.2",
-    "eslint": "^8.45.0",
-    "eslint-config-preact": "^1.3.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-unused-imports": "^3.0.0",
     "fake-indexeddb": "^6.0.0",
     "glob": "^11.0.0",
     "jest-websocket-mock": "^2.4.0",
     "jsdom": "^25.0.1",
     "nodemon": "^3.1.0",
-    "prettier": "^3.0.0",
     "sass": "^1.64.1",
     "size-limit": "^11.1.6",
     "tsc-alias": "^1.8.8",
